# zuzenkeitor

./: .gitignore  pyproject.toml  zuzenkeitor.py
zuzenkeitor_backend/: db.sqlite3  manage.py
zuzenkeitor_backend/zuzenkeitor_backend/: asgi.py  settings.py  urls.py  wsgi.py
zuzenkeitor_backend/zuzenketak/: admin.py  apps.py  models.py  urls.py  views.py
zuzenkeitor_backend/zuzenketak/migrations/: 0001_initial.py
zuzenkeitor_backend/zuzenketak/templates/: base.html  exercises.html  index.html
