[tool.poetry]
name = "zuzenkeitor"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cilla Ugarte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.16"
langchain-ollama = "^0.1.3"
langchain = "^0.2.16"
langsmith = "^0.1.111"
python-dotenv = "^1.0.1"
tavily-python = "^0.4.0"
langchain-community = "^0.2.16"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
